--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=45", "wheel"]
+requires = ["setuptools>=45", "wheel", "setuptools_scm>=8.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "ai-linter"
-version = "0.1.0"
+dynamic = ["version"]
 description = "A validation tool for AI skills and agent configurations"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -61,6 +61,11 @@ where = ["src"]
 [tool.setuptools.package-dir]
 "" = "src"
 
+[tool.setuptools_scm]
+write_to = "src/_version.py"
+version_scheme = "post-release"
+local_scheme = "no-local-version"
+
 [tool.black]
 line-length = 120
 target-version = ["py310", "py311", "py312"]
@@ -69,6 +74,7 @@ include = '\.pyi?$'
 [tool.isort]
 profile = "black"
 multi_line_output = 3
+skip = ["src/_version.py"]
 
 [tool.mypy]
 python_version = "3.10"
