Add new validators for code snippets and prompt/agent files
- Introduced CodeSnippetValidator to check code snippet sizes in markdown files.
- Added PromptAgentValidator for validating .github/prompts and .github/agents directories.
- Enhanced configuration loading to support new validation settings.
- Implemented unreferenced file validation to ensure all resource files are referenced in markdown.
- Updated main linter logic to incorporate new validators and handle additional checks.
- Created comprehensive tests for new validators to ensure functionality and reliability.

--- a/.ai-linter-config.yaml
+++ b/.ai-linter-config.yaml
@@ -22,3 +22,31 @@ ignore_dirs:
   - ".pytest_cache"
   - "venv"
   - "env"
+
+# Code snippet validation
+# Maximum number of lines allowed in a code snippet before warning
+# Helps prevent bloated AI context by encouraging externalization of large code blocks
+code_snippet_max_lines: 3
+
+# Prompt and agent directories to validate
+# These directories will be checked for token count, references, skills, and tools
+prompt_dirs:
+  - ".github/prompts"
+
+agent_dirs:
+  - ".github/agents"
+
+# Resource directories to check for unreferenced files
+# All files in these directories should be referenced somewhere in markdown files
+resource_dirs:
+  - "references"
+  - "assets"
+  - "scripts"
+
+# Log level for unreferenced files in resource directories
+# Options: ERROR, WARNING, INFO
+unreferenced_file_level: ERROR
+
+# Log level for missing AGENTS.md file in project root
+# Options: ERROR, WARNING, INFO
+missing_agents_file_level: WARNING
