--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ name: CI/CD
     branches:
       - master
       - develop
+    tags:
+      - "[0-9]+.[0-9]+.[0-9]+"
   pull_request:
     branches:
       - master
@@ -65,10 +67,12 @@ jobs:
     needs:
       - test
     permissions:
-      contents: write # needed by svenstaro/upload-release-action
+      contents: write # needed by svenstaro/upload-release-action and ncipollo/release-action
     environment: Python
     runs-on: ubuntu-latest
-    if: github.event_name == 'release'
+    if: |
+      github.event_name == 'release' ||
+      (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/'))
 
     steps:
       - uses: actions/checkout@v4
@@ -84,6 +88,17 @@ jobs:
       - name: Check build
         run: twine check dist/*
 
+      - name: Generate changelog
+        id: changelog
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref_name }}
+          allowUpdates: true
+          generateReleaseNotes: true
+          draft: false
+          prerelease: ${{ contains(github.ref_name, '-') }}
+
       - name: Upload wheel to release
         uses: svenstaro/upload-release-action@v2
         with:
@@ -93,15 +108,6 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
           asset_name: ai_linter-${{ github.ref_name }}-py3.12.whl
-
-      - name: Upload source tarball to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: dist/ai_linter-${{ github.ref_name }}.tar.gz
-          tag: ${{ github.ref }}
-          overwrite: true
-          asset_name: ai_linter-src-${{ github.ref_name }}-py3.12.tar.gz
 
       - name: Publish to PyPI
         if: github.event_name == 'release'
