--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,21 +3,21 @@
   name: AI Linter
   description: Validate committed AI skills and agent configurations
   entry: ai-linter
-  language: system
+  language: python
   types: [markdown]
   files: ^(.*/)?(SKILL|AGENTS)\.md$
   require_serial: true
   pass_filenames: true
-  additional_dependencies: [tiktoken, pyyaml]
+  additional_dependencies: [ai-linter]
   minimum_pre_commit_version: 4.5.0
 
 - id: ai-linter-workspace
   name: AI Linter (Workspace)
   description: Validate AI skills and agents in the workspace
   entry: ai-linter
-  language: system
+  language: python
   types: [markdown]
   require_serial: true
   pass_filenames: false
-  additional_dependencies: [tiktoken, pyyaml]
+  additional_dependencies: [ai-linter]
   minimum_pre_commit_version: 4.5.0
