feat(logging): Implement multiple logging formats with factory and adapter patterns
- Added support for three logging formats: logfmt, file-digest (default), and yaml.
- Introduced LogFormat enum to manage logging format options.
- Created LogFormatterFactory to instantiate the appropriate formatter based on the selected format.
- Implemented BaseLogFormatter as an abstract class for specific formatters (FileDigestFormatter, LogfmtFormatter, YamlFormatter).
- Enhanced Logger class to buffer messages and output them using the selected formatter.
- Updated configuration to allow setting log format via CLI and config file.
- Added tests for new formatters and Logger functionality.
- Documented logging format implementation in a new markdown file.

--- a/.ai-linter-config.yaml
+++ b/.ai-linter-config.yaml
@@ -3,8 +3,15 @@
 # Place this file in your project root as .ai-linter-config.yaml
 
 # Logging configuration
-# Options: DEBUG, INFO, WARNING, ERROR
+# Level options: DEBUG, INFO, WARNING, ERROR
 log_level: INFO
+
+# Logging output format
+# Options: file-digest (default), logfmt, yaml
+# - file-digest: Human-readable format grouped by file
+# - logfmt: Key=value pairs on each line (original format)
+# - yaml: Structured YAML output (machine-readable)
+log_format: file-digest
 
 # Maximum warnings before the linter fails
 # Set to a number or use 'inf' for unlimited warnings
@@ -22,6 +29,8 @@ ignore_dirs:
   - ".pytest_cache"
   - "venv"
   - "env"
+  - ".history"
+  - "doc"
 
 # Code snippet validation
 # Maximum number of lines allowed in a code snippet before warning
