# This is a combination of 2 commits. # This is the 1st commit message:
Add structured logging with RuleMessage and refactor formatters

- Introduced RuleMessage class to encapsulate log message details.
- Updated FileDigestFormatter, LogfmtFormatter, and YamlFormatter to use RuleMessage for structured logging.
- Refactored tests for formatters to accommodate changes in message structure.
- Enhanced LogLevel class with color coding for console output.
- Modified Logger class to support logging with RuleMessage.
- Updated various validators and processors to utilize the new logging structure.
- display elapsed processing time at the end of aiLinter execution.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
       "args": [
         "../pendulum-guide",
         "--log-level",
-        "DEBUG"
+        "DEBUG",
+        "--skills",
+        "--log-format",
+        "logfmt"
       ],
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}",
