--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,10 @@
     "/^cd /home/wsl/fchastanet/ai-linter && python -m pytest --cov=src --cov-report=term-missing 2>&1 \\| tail -50$/": {
       "approve": true,
       "matchCommandLine": true
+    },
+    "/^cd /home/wsl/fchastanet/ai-linter && python -m pytest --tb=short 2>&1 \\| tail -100$/": {
+      "approve": true,
+      "matchCommandLine": true
     }
   }
 }
