--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,7 @@
   },
   "github.copilot.chat.commitMessageGeneration.instructions": [
     {
-      "file": "../../copilot-prompts/.github/commit-message.instructions.md"
+      "file": "../copilot-prompts/.github/commit-message.instructions.md"
     }
   ],
   "python.analysis.extraPaths": [
@@ -37,5 +37,10 @@
       "approve": true,
       "matchCommandLine": true
     }
-  }
+  },
+  "python.testing.pytestArgs": [
+    "src"
+  ],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true
 }
