--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,10 +50,10 @@ Repository = "https://github.com/fchastanet/ai-linter.git"
 Issues = "https://github.com/fchastanet/ai-linter/issues"
 
 [project.scripts]
-ai-linter = "aiLinter:main"
+ai-linter = "ai_linter:main"
 
 [tool.setuptools]
-py-modules = ["aiLinter"]
+py-modules = ["ai_linter"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
