✨(validators): Enhance validation logic and refactor agent handling
Improve validation capabilities by integrating code snippet validation across multiple validators. Refactor agent and skill validators to utilize new code snippet validation logic, ensuring better error handling and consistency.

## ✨ Validation Enhancements
- Integrate `CodeSnippetValidator` into `AgentValidator` and `SkillValidator` for improved code snippet validation.
- Update `validate_agent_file` and `validate_skill_file` methods to include snippet validation results.

## 🔧 Refactoring
- Refactor `ProcessAgents` and `SkillValidator` constructors for better readability.
- Remove `PromptAgentValidator` and its tests to streamline the validation process.

## 🐛 Bug Fixes
- Fix logging messages in `UnreferencedFileValidator` for clearer error reporting.

## 🚀 Benefits
- Enhance overall validation accuracy and maintainability of the codebase.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -169,7 +169,7 @@
       "label": "AI Linter: Debug Pendulum Guide",
       "type": "shell",
       "command": "python",
-      "args": ["src/aiLinter.py", ".", "--skills", "--log-level", "DEBUG"],
+      "args": ["src/ai_linter.py", ".", "--skills", "--log-level", "DEBUG"],
       "group": "test",
       "problemMatcher": {
         "owner": "ai-linter",
