--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Debug AI Linter - Pendulum Guide",
       "type": "debugpy",
       "request": "launch",
-      "program": "src/aiLinter.py",
+      "program": "src/ai_linter.py",
       "args": [
         "../pendulum-guide",
         "--log-level",
@@ -26,7 +26,7 @@
       "name": "Debug AI Linter - Current Directory",
       "type": "debugpy",
       "request": "launch",
-      "program": "src/aiLinter.py",
+      "program": "src/ai_linter.py",
       "args": [
         ".",
         "--skills",
