✨ Add New Validators and Logging Enhancements (#1)
- Introduced `CodeSnippetValidator` for code snippet size checks in markdown files.
- Enhanced agent and skill validation by integrating code snippet validation logic.
- Added unreferenced file validation to ensure all resource files are referenced.
- Updated configuration loading to support new validation settings.
- Refactored agent and skill validators for improved readability and error handling.
- Integrated `AiStats` for accurate token counting in file reference and prompt agent validators.
- Updated main linter logic to incorporate new validators and handle additional checks.
- Created comprehensive tests for new validators.

## 📝 Documentation & CI Improvements

- Simplified documentation.
- Changed references from `aiLinter.py` to `ai_linter.py` for consistency.
- Added manual triggering (`workflow_dispatch`) to CI/CD workflow.
- Added commit status updater for Python version tests.

## 🛠️ Logging System Refactor

- Implemented multiple logging formats: logfmt, file-digest (default), and yaml.
- Introduced `LogFormat` enum and `LogFormatterFactory`.
- Created `BaseLogFormatter` and specific formatters (`FileDigestFormatter`, `LogfmtFormatter`, `YamlFormatter`).
- Added `RuleMessage` class for structured log messages.
- Enhanced `Logger` class with message buffering and color-coded log levels.
- Updated configuration to allow log format selection via CLI and config file.
- Documented logging format implementation.

## 🔧 Configuration & Misc Fixes

- Refactored `max_warnings` to use integer values (`-1` for unlimited).
- Updated related logic in main and config handling.
- Moved log formatters and log modules to `lib/log` folder.
- Fixed logging messages in `UnreferencedFileValidator`.
- Display elapsed processing time at end of execution.
- Exit with code 0 if warnings are unlimited.

--- a/.ai-linter-config.yaml
+++ b/.ai-linter-config.yaml
@@ -3,11 +3,18 @@
 # Place this file in your project root as .ai-linter-config.yaml
 
 # Logging configuration
-# Options: DEBUG, INFO, WARNING, ERROR
+# Level options: DEBUG, INFO, WARNING, ERROR
 log_level: INFO
 
+# Logging output format
+# Options: file-digest (default), logfmt, yaml
+# - file-digest: Human-readable format grouped by file
+# - logfmt: Key=value pairs on each line (original format)
+# - yaml: Structured YAML output (machine-readable)
+log_format: file-digest
+
 # Maximum warnings before the linter fails
-# Set to a number or use 'inf' for unlimited warnings
+# Set to a number, or use -1 for unlimited warnings
 max_warnings: 10
 
 # Directories to ignore during validation
@@ -22,3 +29,33 @@ ignore_dirs:
   - ".pytest_cache"
   - "venv"
   - "env"
+  - ".history"
+  - "doc"
+
+# Code snippet validation
+# Maximum number of lines allowed in a code snippet before warning
+# Helps prevent bloated AI context by encouraging externalization of large code blocks
+code_snippet_max_lines: 3
+
+# Prompt and agent directories to validate
+# These directories will be checked for token count, references, skills, and tools
+prompt_dirs:
+  - ".github/prompts"
+
+agent_dirs:
+  - ".github/agents"
+
+# Resource directories to check for unreferenced files
+# All files in these directories should be referenced somewhere in markdown files
+resource_dirs:
+  - "references"
+  - "assets"
+  - "scripts"
+
+# Log level for unreferenced files in resource directories
+# Options: ERROR, WARNING, INFO
+unreferenced_file_level: ERROR
+
+# Log level for missing AGENTS.md file in project root
+# Options: ERROR, WARNING, INFO
+missing_agents_file_level: WARNING
