--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
       "group": "test",
       "problemMatcher": {
         "owner": "ai-linter",
-        "fileLocation": "absolute",
+        "fileLocation": "relative",
         "pattern": {
           "regexp": "^level=\"(WARNING|ERROR)\"\\s+rule=\"([^\"]+)\"\\s+path=\"([^\"]+)\"(?:\\s+line=\"(\\d+)\")?\\s+message=\"([^\"]+)\"",
           "file": 3,
@@ -35,7 +35,7 @@
       "group": "test",
       "problemMatcher": {
         "owner": "ai-linter",
-        "fileLocation": "absolute",
+        "fileLocation": "relative",
         "pattern": {
           "regexp": "^level=\"(WARNING|ERROR)\"\\s+rule=\"([^\"]+)\"\\s+path=\"([^\"]+)\"(?:\\s+line=\"(\\d+)\")?\\s+message=\"([^\"]+)\"",
           "file": 3,
@@ -169,7 +169,7 @@
       "label": "AI Linter: Debug Pendulum Guide",
       "type": "shell",
       "command": "python",
-      "args": ["src/aiLinter.py", ".", "--skills", "--log-level", "DEBUG"],
+      "args": ["src/ai_linter.py", ".", "--skills", "--log-level", "DEBUG"],
       "group": "test",
       "problemMatcher": {
         "owner": "ai-linter",
